dada_tests/validate/return_type/compiler-output.ref
Error: cannot return a value
    ╭─[dada_tests/validate/return_type.dada:10:12]
    │
 10 │     return 1 #! ERROR cannot return a value
    ·            ┬  
    ·            ╰── cannot return a value
────╯
Error: must return something
   ╭─[dada_tests/validate/return_type.dada:5:16]
   │
 5 │ fn not_unit2() -> {
   ·                ─┬  
   ·                 ╰── because return type is not unit
───╯
Error: must return something
   ╭─[dada_tests/validate/return_type.dada:2:5]
   │
 1 │ fn not_unit1() -> {
   ·                ─┬  
   ·                 ╰── because return type is not unit
 2 │     return #! ERROR must return something
   ·     ───┬──  
   ·        ╰──── must return something
───╯
